Specified height and weight for container; it no longer stretches

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,9 @@ figure button[name="play"]::after {
 
 .container {
   margin: 11rem 8rem;
+  width: 83.5rem;
+  max-height: 40rem;
+  min-height: 40rem;
   background-color: #fff;
   height: 72vh;
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
