--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,5 +1,8 @@
 .container {
     margin: 11rem 8rem;
+    width: 83.5rem;
+    max-height: 40rem;
+    min-height: 40rem;
     background-color: #fff;
     height: 72vh;
     box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, .5);
